...
          Text(
            'Name Your Route',
            style: TextStyle(fontSize: 18.0),
          ),
          SizedBox(height: 20.0),
          TextFormField(
            key: Key("RouteNameTextField"),
            decoration: textInputDecoration.copyWith(hintText: 'Route Name',
            errorText: _validate ? 'This route name has already been used': null,),
            onChanged: (val) => setState(() => _currentName = val),
            validator: (val) => val!.isEmpty ? 'Please enter a Route Name' : null, ),
          ElevatedButton(
            child: Text(
              'Favourite',
              style: TextStyle(color: Colors.white),
            ),
            onPressed: () async {
              if(_formKey.currentState!.validate()){
                 RouteModel.Route route = RouteModel.Route(name: _currentName.toString() , places:  widget.favouriteList);
                var data = await DatabaseService(
...
