...
                  style: ElevatedButton.styleFrom(
                    primary: Colors.cyan.shade500,
                    shape: BeveledRectangleBorder(
                        borderRadius: BorderRadius.circular(12)),
                  ),
                  child: Text(
                    "Add to Favourite",
                    style: TextStyle(color: Colors.black),
                  )),
              SizedBox(
                height: MediaQuery.of(context).size.height / 20,
              ),
            ],
...
