...
  Widget build(BuildContext context) {
    return Row(
      mainAxisAlignment: MainAxisAlignment.spaceEvenly,
      children: [
        Container(
          child: RoundedLoadingButton(
            key: Key("FavRoutePlaceTileDeleteButton"),
            color: colour,
            width: 150,
            successColor: Colors.green,
            child: Text('Delete From Route', style: TextStyle(color: secondaryColour)),
            controller: _btnController,
            onPressed: () async {
...
              });
              },
          ),
        ),
        Container(
          child: RoundedLoadingButton(
            key: Key("FavRoutePlaceTileAddButton"),
            color:colour,
            width: 150,
            successColor: Colors.green,
            child: Text('Add to Saved Route', style: TextStyle(color: secondaryColour)),
            controller: _secondBtnController,
            onPressed: () async {
...
