...
              )
          ),
        child: SafeArea(
          child: ListView(
            physics: NeverScrollableScrollPhysics(),
            children: [
              widgetCard("Favourite Places", FavouritePlacesProvider(),
                  'assets/images/favourites/london_eye.jpg'),
              widgetCard("Favourite Routes", RouteNameProvider(),
                  'assets/images/favourites/bike.jpg'),
              SizedBox(
                height: MediaQuery.of(context).size.height /7,
              )
            ],
          ),
...
